--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "ibj-front-common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.tsx",
   "exports": {
     ".": {
-      "default": "./index.ts"
+      "default": "./index.tsx"
     }
   },
   "type": "module",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "rollup -c",
+    "build:webpack": "webpack --mode production",
     "start": "webpack serve --open --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-sucrase": "^5.0.2",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.62",
@@ -40,6 +54,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
@@ -49,7 +66,13 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mswjs/http-middleware": "^0.9.2",
+    "@mui/base": "^5.0.0-beta.34",
+    "@mui/material": "^5.15.3",
+    "@mui/system": "^5.15.7",
+    "clsx": "^2.1.0",
     "msw": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
