--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,14 @@
     "baseUrl": "./",
     "paths": { "@ibj/*": ["packages/*"] },
     "allowJs": true,
-    "module": "CommonJS",
+    "module": "ES6",
     "noEmit": false
   },
   "include": [
     ".eslintrc.js",
-    "packages/eslint-config/**/*",
-    "packages/typescript-config/**/*.json",
+    "packages/*",
     "./**/*"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ignorePattern": ["./dist/*"]
 }
