1. 롤업빌드세팅 common모듈과 es모듈 따로 빌드 - 롤업은 각 모듈별로 빌드해야 아웃풋을 원하는대로 빌드 가능 feat _components에서 src경로제거 등

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./",
-    "paths": { "@ibj/*": ["packages/*"] },
+    "paths": { 
+      "@ibj/*": ["packages/*"],
+      "@ibj/components/*": ["packages/_components/src/*"],
+      "@ibj/eslint-config/*": ["packages/eslint-config/*"]
+    },
     "allowJs": true,
     "module": "ES6",
     "noEmit": false
