빌드 모듈분리

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ibj-front-common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.tsx",
+  "main": "./dist/index.js",
   "exports": {
     ".": {
-      "default": "./index.tsx"
+      "default": "./dist/index.js"
     }
   },
   "scripts": {
