컴포넌트 빌드수정중

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./packages/typescript-config/base.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "dist",
     "baseUrl": "./",
     "paths": { 
       "@ibj/*": ["packages/*"],
