--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends":"../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "../../dist/components"
+  },
   "include": [
     "index.tsx",
     "**/index.tsx"
