이모션 스타일드 이스케이프 에러 수정

--- a/package.json
+++ b/package.json
@@ -79,5 +79,6 @@
   "peerDependencies": {
     "@mswjs/http-middleware": "^0.9.2",
     "msw": "^2.2.2"
-  }
+  },
+  "resolutions": { "@emotion/serialize": "1.1.3" }
 }
