--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "webpack serve --open --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -62,7 +63,8 @@
     "webpack": "^5.1.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "prettier": "^3.2.5"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
