동적 임포트 및 default 빌드 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     ".eslintrc.js",
     "packages/*",
     "packages/*/package.rollup.config.js",
-    "rollup.config.js",
+    "rollup.config.mjs",
   ],
   "exclude": ["node_modules"],
   "ignorePattern": ["./dist/*"]
