--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-dynamic-import-vars": "^2.1.2",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-sucrase": "^5.0.2",
     "@rollup/plugin-typescript": "^11.1.6",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.62",
@@ -54,7 +54,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
+    "prettier": "^3.2.5",
     "rollup": "^2.79.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "ts-loader": "^9.5.1",
@@ -63,8 +65,7 @@
     "webpack": "^5.1.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2",
-    "webpack-node-externals": "^3.0.0",
-    "prettier": "^3.2.5"
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -82,5 +83,7 @@
     "@mswjs/http-middleware": "^0.9.2",
     "msw": "^2.2.2"
   },
-  "resolutions": { "@emotion/serialize": "1.1.3" }
+  "resolutions": {
+    "@emotion/serialize": "1.1.3"
+  }
 }
