--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "file-loader": "^6.2.0",
     "prettier": "^3.2.5",
     "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
