컴포넌트 eslint에러

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends":"../../tsconfig.json",
+  "extends":"../typescript-config/next-config.json",
   "compilerOptions": {
     "outDir": "../../dist/components",
     "allowJs": true,
