--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "rollup -c --verbose",
     "build:webpack": "webpack --mode production",
     "start": "webpack serve --open --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier . --write",
+    "eslint": "eslint ."
   },
   "type": "module",
   "keywords": [],
@@ -56,7 +58,6 @@
     "file-loader": "^6.2.0",
     "prettier": "^3.2.5",
     "rollup": "^2.79.1",
-    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
