--- a/packages/eslint-config/tsconfig.json
+++ b/packages/eslint-config/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "extends":"../../tsconfig.json",
-  "include": [
-    "index.ts",
-  ],
+  "extends": "../typescript-config/base.json",
+  "include": ["index.ts"]
 }
