--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "ibj-front-common",
-  "version": "1.0.0",
+  "name": "@dvisign/ibj-packages",
+  "version": "1.0.6",
   "description": "",
   "main": "./dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url":"https://github.com/dvisign/ibj-packages.git"
+  },
+  "author": "dvisign",
   "exports": {
     ".": {
       "default": "./dist/index.js"
-    }
+    },
+    "./components": "./dist/components/index.js",
+    "./eslint-config": "./dist/eslint-config/index.js",
+    "./typescript-config": "./dist/typescript-config/index.js"
   },
   "scripts": {
     "build": "rollup -c --verbose",
     "build:webpack": "webpack --mode production",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "start": "webpack serve --open --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "storybook": "storybook dev -p 6006",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.23.9",
@@ -52,7 +64,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
     "prettier": "^3.2.5",
     "rollup": "^2.79.1",
@@ -66,7 +77,20 @@
     "webpack": "^5.1.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "@chromatic-com/storybook": "^1.1.9",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-storysource": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/nextjs": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/test": "^7.6.17",
+    "eslint-plugin-storybook": "^0.6.15",
+    "storybook": "^7.6.17"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
