--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvisign/ibj-packages",
-  "version": "1.0.8",
+  "version": "1.1.5",
   "description": "",
   "main": "./dist/index.js",
   "files": [
@@ -8,16 +8,14 @@
   ],
   "repository": {
     "type": "git",
-    "url":"https://github.com/dvisign/ibj-packages.git"
+    "url": "https://github.com/dvisign/ibj-packages.git"
   },
   "author": "dvisign",
   "exports": {
-    ".": {
-      "default": "./dist/index.js"
-    },
-    "./components": "./dist/components/index.js",
-    "./eslint-config": "./dist/eslint-config/index.js",
-    "./typescript-config": "./dist/typescript-config/index.js"
+    ".": "./dist/index.js",
+    "./components/*": "./dist/components/*",
+    "./eslint-config/*": "./dist/eslint-config/*",
+    "./typescript-config/*": "./dist/typescript-config/*"
   },
   "scripts": {
     "build": "rollup -c --verbose",
@@ -36,6 +34,7 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@chromatic-com/storybook": "^1.1.9",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -44,6 +43,16 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-sucrase": "^5.0.2",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-storysource": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/nextjs": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@types/eslint": "^8.56.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.62",
@@ -64,6 +73,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
     "prettier": "^3.2.5",
     "rollup": "^2.79.1",
@@ -71,26 +81,14 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "storybook": "^7.6.17",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "webpack": "^5.1.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2",
-    "webpack-node-externals": "^3.0.0",
-    "@chromatic-com/storybook": "^1.1.9",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/addon-storysource": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/nextjs": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/test": "^7.6.17",
-    "eslint-plugin-storybook": "^0.6.15",
-    "storybook": "^7.6.17"
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
