--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@dvisign/ibj-typescript-config/base.json",
+  "extends": "@dvisign/ibj-config/base.json",
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": "./",
